--- a/TopNotify/src-vite/src/CSS/App.css
+++ b/TopNotify/src-vite/src/CSS/App.css
@@ -93,7 +93,7 @@ body {
     display: flex;
     align-items: center;
     font-size: 12px;
-    padding-left: 10px;
+    padding-inline-start: 10px;
     gap: 10px;
     margin-top: 12px;
 }
@@ -126,7 +126,7 @@ body {
 
 .footerLogo {
     height: 50%;
-    margin-left: 10px;
+    margin-inline-start: 10px;
     opacity: 0.8;
     filter: invert(100);
 }
@@ -212,7 +212,7 @@ button:hover {
 button svg {
     width: 1.25rem;
     height: 1.25rem;
-    margin-right: 0.5rem;
+    margin-inline-end: 0.5rem;
     stroke-width: 2.5;
 }
 
@@ -225,7 +225,7 @@ button svg * {
 }
 
 .iconButton svg, .locationSelectButton svg, .selectSoundButton svg {
-    margin-right: 0 !important;
+    margin-inline-end: 0 !important;
 }
 
 *::-webkit-scrollbar {
@@ -304,5 +304,5 @@ button svg * {
 }
 
 .taleft {
-    text-align: left;
+    text-align: start;
 }
