--- a/TopNotify/src-vite/src/CSS/App.css
+++ b/TopNotify/src-vite/src/CSS/App.css
@@ -78,10 +78,11 @@ body {
     padding-top: 7px;
     height: 100vh;
     width: 100vw;
-    background-image: var(--image-bg) !important;
-    background-size: 120vw !important;
-    background-repeat: no-repeat;
-    image-rendering: pixelated;
+    /* background-image: var(--image-bg) !important; */
+    /* background-size: 120vw !important; */
+    /* background-repeat: no-repeat; */
+    /* image-rendering: pixelated; */
+    background-color: #222222 !important;
 }
 
 
