--- a/TopNotify/src-vite/src/CSS/App.css
+++ b/TopNotify/src-vite/src/CSS/App.css
@@ -140,7 +140,7 @@ body {
 
 .draggableHeader {
     display: flex;
-    margin-right: 15%;
+    margin-inline-end: 15%;
     align-items: center;
     gap: 0.5rem;
     margin-bottom: 4.3vw;
@@ -153,7 +153,7 @@ body {
 
 .windowCloseButton {
     position: absolute;
-    right: 0px;
+    inset-inline-end: 0px;
     top: 2vw;
 }
 
